Fix padding top on mobile

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -355,3 +355,6 @@ object-fit
 
   .header
     position: static
+
+  .wrapper
+    padding-top: 0
